# UVD

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  index.py  router.py
config/: __init__.py  config.py
static/css/: styles.css
static/js/: script.js
tests/: test.py
